drop shadow, color changes

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "*://*.cs.utexas.edu/~gheith/*"
   ],
   "content_scripts": [{
-    "js": ["js/content.js"],
+    "js": ["js/jquery-3.3.1.min.js", "js/content.js"],
+    "css": ["css/styles.css"],
     "matches": ["https://www.cs.utexas.edu/~gheith/*"]
   }]
 }
