--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,16 @@
   "description": "Adds features and improves the look of Dr. Gheith's 439 project website",
   "permissions": ["tabs",
     "declarativeContent",
+    "identity",
     "*://*.cs.utexas.edu/~gheith/*"
   ],
   "content_scripts": [{
     "js": ["js/jquery-3.3.1.min.js", "js/content.js"],
     "css": ["css/styles.css"],
     "matches": ["https://www.cs.utexas.edu/~gheith/*"]
-  }]
+  }],
+  "background": {
+    "page": "html/background.html"
+  },
+  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
 }
